<resources>
    <string name="app_name">News Dekho</string>
    <string name="newsHeading">newsHeading</string>
    <string name="newsDesc">newsDesc</string>
    <string name="newsThumbnail">TODO</string>
    <string name="title_activity_web">WebActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="newsDate">newsDate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_headlines">top headlines</string>
    <string name="international">International</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
</resources>